--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,9 @@
 	<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 </head>
 <body>
-	<div class="nav-left">
+	<ul class="msgin" style="position:fixed; padding: 5px;"></ul>
+
+	<div class="nav-left" style="display:none;">
 		<h2>Game Center</h2>
 		<div>
 			<details>
@@ -45,7 +47,7 @@
 		</div>
 	</div>
 
-	<div class="nav-right">
+	<div class="nav-right" style="display:none;">
 		<table>
 			<tr>
 				<td>
